# unavi

./: .deny.toml  .dockerignore  .env  .envrc  .gitignore  .gitmodules  .npmrc  .prettierignore  .prettierrc  .prettierrc.json  .taplo.toml  CNAME  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  Trunk.toml  components.nix  crates.nix  default.nix  deny.toml  docker-compose.prod.yml  docker-compose.yml  flake.nix  index.html  package.json  pnpm-lock.yaml  rust-toolchain.toml  shell.nix  style-de440e813f5b917d.css  treefmt.nix  turbo.json  unavi-app-3773422e896cb457.js  unavi-app-5080994b5e4c4353.js  unavi-app-e08c5e01fcaac59a.js  wasm.nix
components/unavi-mirror/: Cargo.toml  README.md
components/unavi-mirror/src/: bindings.rs  lib.rs
components/unavi-mirror/wit/: world.wit
components/unavi-shapes/: Cargo.toml  README.md
components/unavi-shapes/src/: bindings.rs  cuboid.rs  lib.rs
components/unavi-shapes/wit/: world.wit
components/unavi-system/: Cargo.toml
components/unavi-system/src/: bindings.rs  lib.rs  store.rs
components/unavi-system/wit/: world.wit
components/unavi-ui/: Cargo.toml  README.md
components/unavi-ui/src/: bindings.rs  lib.rs
components/unavi-ui/wit/: world.wit
components/wired-gltf/: Cargo.toml  wit
components/wired-gltf/src/: bindings.rs  lib.rs
components/wired-script/: Cargo.toml  wit
components/wired-script/src/: bindings.rs  lib.rs
crates/bevy-hsd/: Cargo.toml
crates/bevy-hsd/examples/: hsd.rs
crates/bevy-hsd/src/: cache.rs  compile.rs  data.rs  hydrate.rs  lib.rs  load.rs  merge.rs  stage.rs  stage_nodes.rs
crates/bevy-wds/: Cargo.toml
crates/bevy-wds/src/: await_blob.rs  blob_deps.rs  blob_request.rs  lib.rs  util.rs
crates/loro-schema/: Cargo.toml
crates/loro-schema/src/: lib.rs  schema.rs  validate.rs  validator.rs
crates/loro-surgeon/: Cargo.toml
crates/loro-surgeon/src/: error.rs  hydrate.rs  lib.rs  reconcile.rs
crates/unavi-app/: Cargo.toml  README.md  build.rs  default.nix  index.html
crates/unavi-app/examples/: demo.rs  playground.rs
crates/unavi-app/public/: style.css
crates/unavi-app/src/: did.rs  dirs.rs  lib.rs  main.rs  state.rs  unavi_system.rs  update.rs
crates/unavi-app/wix/: gen-assets.bat  main.wxs
crates/unavi-avatar/: Cargo.toml
crates/unavi-avatar/examples/: avatar.rs
crates/unavi-avatar/src/: bones.rs  defaults.rs  fallback.rs  lib.rs  velocity.rs
crates/unavi-client/: Cargo.toml  build.rs  default.nix  index.html  loader.html
crates/unavi-client/src/: agent.rs  asset_download.rs  assets.rs  async_commands.rs  camera.rs  fade.rs  grab.rs  icon.rs  input_bridge.rs  lib.rs  main.rs  scene.rs  system_scripts.rs  util.rs
crates/unavi-dwn/: Cargo.toml
crates/unavi-dwn/src/: create_record.rs  instance.rs  lib.rs  query_records.rs  registry.rs  world.rs  world_host.rs
crates/unavi-input/: Cargo.toml
crates/unavi-input/src/: actions.rs  config.rs  crosshair.rs  cursor_lock.rs  lib.rs  raycast.rs
crates/unavi-launcher/: Cargo.toml  build.rs  default.nix
crates/unavi-launcher/assets/: base.css  buttons.css  components.css  layout.css  pages.css
crates/unavi-launcher/src/: config.rs  lib.rs  main.rs  process.rs
crates/unavi-launcher/styles/: base.css  buttons.css  components.css  layout.css  pages.css
crates/unavi-launcher/wix/: gen-assets.bat  main.wxs
crates/unavi-locomotion/: Cargo.toml
crates/unavi-locomotion/src/: config.rs  eye_offset.rs  lib.rs  movement.rs  spawner.rs  tracking.rs  xr_movement.rs
crates/unavi-networking/: Cargo.toml
crates/unavi-networking/src/: connection.rs  handler.rs  lib.rs  native.rs  web.rs
crates/unavi-player/: Cargo.toml
crates/unavi-player/examples/: player.rs
crates/unavi-player/src/: avatar_spawner.rs  body.rs  bones.rs  builder.rs  config.rs  controls.rs  eye_offset.rs  first_person.rs  head.rs  id.rs  input.rs  layers.rs  lib.rs  look.rs  menu.rs  spawner.rs  tracking.rs
crates/unavi-portal/: Cargo.toml
crates/unavi-portal/assets/: portal.wgsl
crates/unavi-portal/examples/: portals.rs
crates/unavi-portal/src/: create.rs  lib.rs  material.rs  teleport.rs  tracking.rs
crates/unavi-script/: Cargo.toml
crates/unavi-script/examples/: script.rs  unavi-shapes.rs  wired-agent.rs  wired-ecs.rs  wired-input.rs
crates/unavi-script/src/: agent.rs  asset.rs  commands.rs  dev.rs  engine.rs  event.rs  execute.rs  lib.rs  permissions.rs
crates/unavi-script/tests/: components.rs  ecs.rs  invalid.rs  log.rs  scene.rs  stall.rs
crates/unavi-scripting/: Cargo.toml
crates/unavi-scripting/examples/: unavi-layout.rs  unavi-scene.rs  unavi-shapes.rs  unavi-ui.rs  unavi-vscreen.rs  wired-gltf.rs  wired-input.rs  wired-physics.rs  wired-player.rs  wired-scene.rs
crates/unavi-scripting/src/: asset.rs  data.rs  env.rs  execution.rs  lib.rs  load.rs  raycast.rs  resource_table.rs  script.rs  state.rs  unavi_system.rs
crates/unavi-scripting/tests/: scripts.rs
crates/unavi-server/: Cargo.toml  README.md  default.nix
crates/unavi-server-service/: Cargo.toml
crates/unavi-server-service/src/: lib.rs
crates/unavi-server-social/: Cargo.toml  README.md
crates/unavi-server-social/src/: lib.rs  world_host.rs
crates/unavi-server-web/: Cargo.toml  README.md  index.html
crates/unavi-server-web/src/: fileserve.rs  lib.rs  main.rs
crates/unavi-server-world/: Cargo.toml  README.md
crates/unavi-server-world/src/: cert.rs  connection.rs  lib.rs  main.rs
crates/unavi-server/examples/: web_transport.rs
crates/unavi-server/src/: axum_server.rs  cert.rs  internal_msg.rs  key_pair.rs  lib.rs  main.rs  process_args.rs  web.rs  world_host.rs  world_registry.rs  world_server.rs
crates/unavi-server/tests/: connect.rs  utils.rs  world_host.rs
crates/unavi-server/wix/: main.wxs
server/: Cargo.toml  README.md
server/src/: fileserve.rs  main.rs
server/src/web/: fileserve.rs  mod.rs
server/src/world/: mod.rs
server/static/: index.html
unavi-server/: Cargo.toml  README.md
unavi-server/examples/: web_transport.rs
unavi-server/src/: axum_server.rs  lib.rs  main.rs
unavi-server/src/web/: mod.rs
(+3620 files in other folders)
