[workspace]
members  = ["crates/*", "wasm/*"]
resolver = "3"

[workspace.package]
edition    = "2024"
license    = "MPL-2.0"
repository = "https://github.com/unavi-xyz/unavi"
version    = "0.0.16"

[workspace.lints.clippy]
cast_precision_loss = "allow"
clone_on_ref_ptr    = "warn"
nursery             = { level = "warn", priority = -1 }
pedantic            = { level = "warn", priority = -1 }
unwrap_used         = "deny"

# Bevy-specific patterns
needless_pass_by_value = "allow"
too_many_arguments     = "allow"
type_complexity        = "allow"

# wit-bindgen generated code
collection_is_never_read = "allow"

# dioxus macro
volatile_composites = "allow"

[workspace.metadata.release]
publish        = false
shared-version = true
tag-name       = "v{{version}}"

[workspace.dependencies]
anyhow             = "1.0.100"
avian3d            = "0.4.1"
bevy               = "0.17.3"
bevy_async_task    = "0.11.1"
bevy_gltf_kun      = { git = "https://github.com/unavi-xyz/gltf_kun" }
bevy_rich_text3d   = "0.5.1"
bevy_seedling      = { default-features = false, version = "0.6.1" }
bevy_vrm           = { git = "https://github.com/unavi-xyz/bevy_vrm" }
clap               = { features = ["derive"], version = "4.5.53" }
directories        = "6.0.0"
embed-resource     = "3.0.6"
flume              = "0.12.0"
futures            = "0.3.31"
gltf_kun           = { git = "https://github.com/unavi-xyz/gltf_kun" }
image              = { default-features = false, version = "0.25.9" }
iroh               = "0.95.1"
iroh-tickets       = "0.2.0"
parking_lot        = "0.12.5"
postcard           = { features = ["use-std"], version = "1.1.3" }
rand               = "0.9.2"
scc                = "3.4.8"
serde              = "1.0.228"
serde_json         = "1.0.148"
serde_vrm          = { git = "https://github.com/unavi-xyz/bevy_vrm" }
smallvec           = "1.15.1"
tarpc              = "0.37.0"
tempfile           = "3.24.0"
tokio              = "1.48.0"
tokio-serde        = "0.9.0"
tracing            = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-test       = "0.2.5"
wit-bindgen        = "0.50.0"
wtransport         = "0.6.1"
xdid               = "0.6.0"
zeroize            = "1.8.2"

[patch.crates-io]
bevy_gltf_kun = { git = "https://github.com/unavi-xyz/gltf_kun" }
bevy_vrm      = { git = "https://github.com/unavi-xyz/bevy_vrm" }
gltf_kun      = { git = "https://github.com/unavi-xyz/gltf_kun" }

[profile.release]
codegen-units = 1
lto           = true
# panic         = "abort"
# strip         = true

[profile.release-wasm]
inherits  = "release"
opt-level = "z"

[profile.dev]
codegen-backend = "cranelift"

[profile.dev.package."*"]
codegen-backend = "llvm"
opt-level       = 3

[profile.wasm-dev]
inherits  = "dev"
opt-level = 1

# Generated by Dioxus
[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
