[workspace]
members  = ["crates/*", "wasm/*"]
resolver = "3"

[workspace.package]
edition    = "2024"
license    = "MPL-2.0"
repository = "https://github.com/unavi-xyz/unavi"
version    = "0.0.16"

[workspace.lints.clippy]
cast_precision_loss = "allow"
clone_on_ref_ptr    = "warn"
nursery             = { level = "warn", priority = -1 }
pedantic            = { level = "warn", priority = -1 }
unwrap_used         = "deny"

# Bevy-specific patterns
needless_pass_by_value = "allow"
too_many_arguments     = "allow"
type_complexity        = "allow"

# wit-bindgen generated code
collection_is_never_read = "allow"
same_length_and_capacity = "allow"

# dioxus macro
volatile_composites = "allow"

[workspace.metadata.release]
publish        = false
shared-version = true
tag-name       = "v{{version}}"

[workspace.dependencies]
anyhow             = "1.0.100"
avian3d            = "0.4.1"
axum               = "0.8.8"
bevy               = "0.17.3"
bevy_vrm           = { git = "https://github.com/unavi-xyz/bevy_vrm" }
blake3             = { features = ["serde"], version = "1.8.2" }
bytemuck           = "1.24.0"
bytes              = "1.10.1"
clap               = { features = ["derive"], version = "4.5.54" }
directories        = "6.0.0"
embed-resource     = "3.0.6"
futures            = "0.3.31"
image              = { default-features = false, version = "0.25.9" }
iroh               = { default-features = false, version = "0.95.1" }
iroh-blobs         = { default-features = false, version = "0.97.0" }
loro               = "1.10.3"
n0-future          = "0.3.2"
parking_lot        = "0.12.5"
postcard           = { features = ["experimental-derive", "use-std"], version = "1.1.3" }
rand               = "0.9.2"
reqwest            = "0.13.1"
ron                = "0.9.0"
scc                = "3.4.8"
serde              = "1.0.228"
smol_str           = { features = ["serde"], version = "0.3.3" }
tempfile           = "3.24.0"
thiserror          = "2.0.12"
time               = "0.3.44"
tokio              = "1.49.0"
tracing            = "0.1.44"
tracing-subscriber = "0.3.22"
web-sys            = "0.3.85"
wit-bindgen        = "0.50.0"
xdid               = "0.6.0"
zeroize            = "1.8.2"

[patch.crates-io]
bevy_gltf_kun = { git = "https://github.com/unavi-xyz/gltf_kun" }
bevy_vrm      = { git = "https://github.com/unavi-xyz/bevy_vrm" }
gltf_kun      = { git = "https://github.com/unavi-xyz/gltf_kun" }
iroh-blobs    = { git = "https://github.com/kayhhh/iroh-blobs" }
xdid          = { git = "https://github.com/unavi-xyz/xdid" }

[profile.release]
codegen-units = 1
lto           = true
# panic         = "abort"
# strip         = true

[profile.release-wasm]
inherits  = "release"
opt-level = "z"

[profile.dev]
codegen-backend = "cranelift"

[profile.dev.package."*"]
codegen-backend = "llvm"
opt-level       = 3

[profile.wasm-dev]
inherits  = "dev"
opt-level = 1

# Generated by Dioxus
[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
