[package]
name = "unavi-server"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs"] }

leptos = { version = "0.5.1", features = ["ssr"], optional = true }
leptos_axum = { version = "0.5.1", optional = true }
unavi-web-app = { path = "../web/app", features = ["ssr"], optional = true }

[features]
default = ["web", "world"]
web = [
  "dep:leptos",
  "dep:leptos_axum",
  "dep:unavi-web-app"
]
world = []
