[package]
name = "unavi-server"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = ["web", "world"]
web = [
  "dep:leptos",
  "dep:leptos_axum",
  "dep:unavi-web-app"
]
world = [
  "dep:rcgen",
  "dep:rustls",
  "dep:time",
  "dep:wtransport"
]

[dependencies]
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

leptos = { version = "0.5.1", features = ["ssr"], optional = true }
leptos_axum = { version = "0.5.1", optional = true }
unavi-web-app = { path = "../unavi-web/app", features = ["ssr"], optional = true }

rcgen = { version = "0.11.3", optional = true }
rustls = { version = "0.21.9", optional = true }
time = { version = "0.3.30", optional = true }
wtransport = { version = "0.1.8", optional = true }

[dev-dependencies]
rustls-native-certs = "0.6.3"
