[package]
name = "unavi-mirror"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt.workspace = true

[package.metadata.component]
package = "unavi:mirror"

[package.metadata.component.target.dependencies]
"wired:gltf" = { path = "../../wired-protocol/spatial/wit/wired-gltf" }
"wired:math" = { path = "../../wired-protocol/spatial/wit/wired-math" }
