[package]
name = "unavi-shapes"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt.workspace = true

[package.metadata.component]
package = "unavi:shapes"

[package.metadata.component.target.dependencies]
"wired:gltf" = { path = "../../wired-protocol/spatial/wit/wired-gltf" }
