[package]
name = "unavi-system"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
bitflags.workspace = true
wit-bindgen-rt.workspace = true

[package.metadata.component]
package = "unavi:system"

[package.metadata.component.target.dependencies]
"unavi:ui" = { path = "../unavi-ui/wit" }
"wired:input" = { path = "../../wired-protocol/spatial/wired-input" }
"wired:log" = { path = "../../wired-protocol/spatial/wired-log" }
"wired:math" = { path = "../../wired-protocol/spatial/wired-math" }
"wired:script" = { path = "../../wired-protocol/spatial/wired-script" }
"wired:spatial" = { path = "../../wired-protocol/spatial/wired-spatial" }
