[package]
name = "unavi-system"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
wit-bindgen-rt.workspace = true

[package.metadata.component]
package = "unavi:system"

[package.metadata.component.target.dependencies]
"unavi:ui" = { path = "../unavi-ui/wit" }
"wired:script" = { path = "../../wired-protocol/spatial/wit/wired-script" }
