[package]
name = "unavi-system"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
wit-bindgen-rt.workspace = true

[package.metadata.component]
package = "unavi:system"

[package.metadata.component.target.dependencies]
"wired:ecs" = { path = "../../wired-protocol/spatial/wit/wired-ecs" }
"wired:script" = { path = "../../wired-protocol/spatial/wit/wired-script" }
