[package]
name = "unavi-ui"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
bitflags.workspace = true
wit-bindgen-rt.workspace = true

[package.metadata.component]
package = "component:unavi-ui"

[package.metadata.component.dependencies]
