[package]
name = "unavi-ui"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt.workspace = true

[package.metadata.component]
package = "unavi:ui"

[package.metadata.component.target.dependencies]
"wired:input" = { path = "../../wired-protocol/spatial/wired-input" }
"wired:math" = { path = "../../wired-protocol/spatial/wired-math" }
"wired:spatial" = { path = "../../wired-protocol/spatial/wired-spatial" }
