[package]
name = "wired-gltf"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt.workspace = true

[package.metadata.component]
package = "wired:gltf"

[package.metadata.component.target]
world = "host"

[package.metadata.component.dependencies]
