[package]
name = "wired-script"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
bitflags.workspace = true
tracing.workspace = true
wit-bindgen-rt.workspace = true

[package.metadata.component]
package = "wired:script"

[package.metadata.component.dependencies]
