[package]
edition.workspace    = true
license.workspace    = true
name                 = "bevy-hsd"
publish              = false
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[dependencies]
bevy.workspace     = true
loro.workspace     = true
loro-surgeon.path  = "../loro-surgeon"
wired-schemas.path = "../wired-schemas"

[dev-dependencies]
bevy_panorbit_camera = "0.33.1"
