[package]
edition.workspace    = true
license.workspace    = true
name                 = "bevy-hsd"
publish              = false
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[dependencies]
bevy.workspace     = true
bevy-wds.path      = "../bevy-wds"
blake3.workspace   = true
bytemuck.workspace = true
bytes.workspace    = true
loro.workspace     = true
loro-surgeon.path  = "../loro-surgeon"
rand.workspace     = true
smol_str.workspace = true
wired-schemas.path = "../wired-schemas"

[dev-dependencies]
bevy_panorbit_camera   = "0.33.1"
iroh-blobs             = { default-features = true, workspace = true }
tokio.workspace        = true
unavi-wasm-compat.path = "../unavi-wasm-compat"
