[package]
edition.workspace    = true
license.workspace    = true
name                 = "bevy-wds"
publish              = false
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[dependencies]
anyhow.workspace       = true
bevy.workspace         = true
blake3.workspace       = true
bytes.workspace        = true
iroh.workspace         = true
unavi-wasm-compat.path = "../unavi-wasm-compat"
wds.path               = "../wds"
