[package]
edition.workspace    = true
license.workspace    = true
name                 = "unavi-app"
publish              = false
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[dependencies]
anyhow      = "1.0.98"
bevy        = { features = ["wayland"], workspace = true }
directories = "6.0.0"
image       = { default-features = false, features = ["png"], version = "0.25.6" }
winit       = { default-features = false, version = "0.30.11" }
