[package]
edition.workspace    = true
license.workspace    = true
name                 = "unavi-app"
publish              = false
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[dependencies]
anyhow                = "1.0.98"
avian3d.workspace     = true
bevy                  = { default-features = true, features = ["wayland"], workspace = true }
bevy_mod_openxr       = "0.3.0"
directories.workspace = true
image                 = { default-features = false, features = ["png"], version = "0.25.6" }
unavi-input.path      = "../unavi-input"
unavi-player.path     = "../unavi-player"
winit                 = { default-features = false, version = "0.30.11" }
