[package]
name = "unavi-avatar"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bevy.workspace = true
bevy_vrm.workspace = true
paste = "1.0.15"
serde_json.workspace = true

[dev-dependencies]
bevy-inspector-egui.workspace = true
bevy_panorbit_camera.workspace = true
