[package]
name = "unavi-avatar"
publish = false
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
avian3d.workspace = true
bevy.workspace = true
bevy_vrm.workspace = true
paste = "1.0.15"
unavi-constants = { path = "../unavi-constants" }

[dev-dependencies]
bevy-inspector-egui.workspace = true
bevy_egui = "0.28.0"
bevy_panorbit_camera.workspace = true
