[package]
edition.workspace    = true
license.workspace    = true
name                 = "unavi-avatar"
publish              = false
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[features]
webgpu = ["bevy/webgpu"]

[dependencies]
bevy               = { default-features = true, workspace = true }
bevy_gltf_kun      = { git = "https://github.com/unavi-xyz/gltf_kun" }
bevy_vrm.workspace = true
paste              = "1.0.15"
unavi-assets.path  = "../unavi-assets"
