[package]
build                = "build.rs"
edition.workspace    = true
license.workspace    = true
name                 = "unavi-client"
publish              = false
repository.workspace = true
version.workspace    = true

[features]
default                 = ["discovery-local-network"]
devtools                = ["devtools-bevy", "devtools-network"]
devtools-bevy           = ["bevy/bevy_dev_tools"]
devtools-network        = []
discovery-local-network = ["iroh/discovery-local-network"]

[lints]
workspace = true

[build-dependencies]
embed-resource.workspace = true

[dependencies]
anyhow.workspace           = true
avian3d.workspace          = true
bevy                       = { default-features = true, features = ["https", "jpeg"], workspace = true }
bevy_av1                   = "0.3.0"
bevy_rich_text3d.workspace = true
bevy_seedling              = { features = ["wav"], workspace = true }
bevy_vrm.workspace         = true
bitflags                   = "2.10.0"
blake3.workspace           = true
clap.workspace             = true
directories.workspace      = true
flume                      = "0.12.0"
image                      = { features = ["png"], workspace = true }
iroh.workspace             = true
iroh-gossip                = "0.95.0"
loro.workspace             = true
postcard.workspace         = true
reqwest                    = { features = ["blocking"], workspace = true }
scc.workspace              = true
serde.workspace            = true
time.workspace             = true
tokio                      = { features = ["rt", "rt-multi-thread"], workspace = true }
unavi-constants.path       = "../unavi-constants"
unavi-input.path           = "../unavi-input"
unavi-player.path          = "../unavi-player"
unavi-portal.path          = "../unavi-portal"
unavi-script.path          = "../unavi-script"
wds.path                   = "../wds"
winit                      = { default-features = false, version = "0.30.12" }
xdid.workspace             = true
zeroize.workspace          = true
