[package]
build                = "build.rs"
edition.workspace    = true
license.workspace    = true
name                 = "unavi-client"
publish              = false
repository.workspace = true
version.workspace    = true

[features]
devtools         = ["devtools-bevy", "devtools-network"]
devtools-bevy    = ["bevy/bevy_dev_tools"]
devtools-network = []
mdns             = ["iroh/discovery-local-network"]
webgpu           = ["bevy/webgpu", "unavi-avatar/webgpu", "unavi-locomotion/webgpu"]

[lints]
workspace = true

[build-dependencies]
embed-resource.workspace = true

[dependencies]
anyhow.workspace       = true
avian3d.workspace      = true
bevy                   = { default-features = true, features = ["https", "jpeg"], workspace = true }
bevy-hsd.path          = "../bevy-hsd"
bevy-wds.path          = "../bevy-wds"
bevy_vrm.workspace     = true
bitflags               = "2.10.0"
blake3.workspace       = true
bytemuck.workspace     = true
bytes.workspace        = true
clap.workspace         = true
half.workspace         = true
image                  = { features = ["png"], workspace = true }
iroh-gossip            = "0.95.0"
log                    = { features = ["max_level_debug", "release_max_level_warn"], version = "*" }
loro.workspace         = true
loro-surgeon.path      = "../loro-surgeon"
n0-future.workspace    = true
parking_lot.workspace  = true
postcard.workspace     = true
rand.workspace         = true
scc.workspace          = true
serde.workspace        = true
time.workspace         = true
tracing                = { features = ["max_level_debug", "release_max_level_warn"], workspace = true }
unavi-assets.path      = "../unavi-assets"
unavi-avatar.path      = "../unavi-avatar"
unavi-input.path       = "../unavi-input"
unavi-locomotion.path  = "../unavi-locomotion"
unavi-portal.path      = "../unavi-portal"
unavi-wasm-compat.path = "../unavi-wasm-compat"
wds.path               = "../wds"
winit                  = { default-features = false, version = "0.30.12" }
wired-schemas.path     = "../wired-schemas"
xdid.workspace         = true
zeroize.workspace      = true

[target.'cfg(target_family = "wasm")'.dependencies]
iroh.workspace       = true
reqwest.workspace    = true
tokio                = { features = ["rt"], workspace = true }
wasm-bindgen-futures = "0.4"
web-sys              = { features = ["Location", "UrlSearchParams"], workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
directories.workspace = true
iroh                  = { default-features = true, workspace = true }
reqwest               = { features = ["blocking"], workspace = true }
tokio                 = { features = ["rt", "rt-multi-thread"], workspace = true }
unavi-script.path     = "../unavi-script"
