[package]
name = "unavi-dwn"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bevy.workspace = true
bevy_async_task.workspace = true
dwn.workspace = true
serde_json.workspace = true
surrealdb.workspace = true
wired-protocol = { path = "../wired-protocol" }
