[package]
edition.workspace    = true
license.workspace    = true
name                 = "unavi-input"
publish              = false
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[dependencies]
bevy                = { default-features = true, workspace = true }
schminput           = { git = "https://github.com/oelison/Schminput" }
schminput_rebinding = { git = "https://github.com/oelison/Schminput" }
