[package]
edition.workspace    = true
license.workspace    = true
name                 = "unavi-input"
publish              = false
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[features]

[dependencies]
bevy                = { default-features = true, workspace = true }
schminput_rebinding = "0.4.0"

[target.'cfg(target_family = "wasm")'.dependencies]
schminput = "0.4.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
schminput = { features = ["xr"], version = "0.4.0" }
