[package]
build                = "build.rs"
edition.workspace    = true
license.workspace    = true
name                 = "unavi-launcher"
publish              = false
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[build-dependencies]
embed-resource.workspace = true

[dependencies]
anyhow.workspace = true
dioxus = { features = ["desktop", "router"], version = "0.7.1" }
directories.workspace = true
futures.workspace = true
image = { features = ["png"], workspace = true }
reqwest = { default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
], version = "0.12.24" }
runas = "1.2.0"
self-replace = "1.5.0"
semver.workspace = true
serde.workspace = true
tar = "0.4"
tempfile = "3.23.0"
tokio.workspace = true
toml = "0.9.8"
tracing.workspace = true
xz2 = { features = ["tokio"], version = "0.1.7" }
zip = "6.0"
