[package]
build                = "build.rs"
edition.workspace    = true
license.workspace    = true
name                 = "unavi-launcher"
publish              = false
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[build-dependencies]
embed-resource.workspace = true

[dependencies]
anyhow.workspace      = true
dioxus                = { features = ["desktop", "router"], version = "0.7.2" }
directories.workspace = true
futures.workspace     = true
image                 = { features = ["png"], workspace = true }
parking_lot.workspace = true
reqwest.workspace     = true
runas                 = "1.2.0"
self-replace          = "1.5.0"
semver                = "1.0.27"
serde.workspace       = true
tar                   = "0.4"
tempfile.workspace    = true
tokio.workspace       = true
toml                  = "0.9.10"
tracing.workspace     = true
xz2                   = { features = ["tokio"], version = "0.1.7" }
