[package]
edition.workspace    = true
license.workspace    = true
name                 = "unavi-locomotion"
publish              = false
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[features]
webgpu = ["bevy/webgpu"]

[dependencies]
avian3d.workspace  = true
bevy               = { default-features = true, workspace = true }
bevy-tnua          = "0.28.0"
bevy-tnua-avian3d  = "0.9.0"
bevy_vrm.workspace = true
unavi-avatar.path  = "../unavi-avatar"
unavi-input.path   = "../unavi-input"
unavi-portal.path  = "../unavi-portal"

[target.'cfg(target_family = "wasm")'.dependencies]
web-sys = { features = ["Navigator", "Window"], workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
bevy_mod_xr.workspace   = true
bevy_xr_utils.workspace = true
