[package]
name = "unavi-networking"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bevy.workspace = true
tracing.workspace = true
unavi-world = { path = "../unavi-world" }
xwt-core = "0.4.1"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-futures.workspace = true
xwt-web-sys = "0.11.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
wtransport.workspace = true
xwt-wtransport = "0.7.0"
