[package]
name = "unavi-networking"
publish = false
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bevy.workspace = true
bevy_vr_controller.workspace = true
bevy_vrm.workspace = true
capnp-rpc.workspace = true
capnp.workspace = true
thiserror.workspace = true
tokio.workspace = true
unavi-constants = { path = "../unavi-constants" }
unavi-player = { path = "../unavi-player" }
unavi-world = { path = "../unavi-world" }
wired-world = { path = "../wired-world" }
xwt-core.workspace = true
xwt-futures-io = { path = "../xwt-futures-io" }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
xwt-web-sys = { version = "0.12.0", git = "https://github.com/kayhhh/xwt" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
wtransport = { workspace = true, features = ["dangerous-configuration"] }
xwt-wtransport.workspace = true
