[package]
edition.workspace    = true
license.workspace    = true
name                 = "unavi-player"
publish              = false
repository.workspace = true
version.workspace    = true

[lints]
workspace = true

[dependencies]
avian3d.workspace       = true
bevy                    = { default-features = true, workspace = true }
bevy-tnua               = "0.26.0"
bevy-tnua-avian3d       = "0.8.0"
bevy_gltf_kun.workspace = true
bevy_seedling.workspace = true
bevy_vrm.workspace      = true
paste                   = "1.0.15"
unavi-constants.path    = "../unavi-constants"
unavi-input.path        = "../unavi-input"
unavi-portal.path       = "../unavi-portal"

[dev-dependencies]
bevy_rich_text3d.workspace = true
rand                       = "0.9.2"
